# crawler-api

./: .gitignore  Dockerfile  LICENSE  config.yml  docker-compose.yml  pyproject.toml
crawler/api/: main.py  sender.py
crawler/parser/: __init__.py  browser_parser.py  bs4_scrapper_links.py  request_parser.py  scraper.py  utils.py
