[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["Daniil Tolmachev <dev.tolmachev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"
bs4 = "^0.0.2"
lxml = "^5.2.2"
loguru = "^0.7.2"
ua-generator = "^0.5.1"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
playwright = "^1.51.0"
uvloop = "^0.21.0"
httpx = "^0.28.1"
orjson = "^3.10.18"
aiohttp = "^3.11.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
